# Schnapsen

./: .gitignore  Profile.sh  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
AI/: BetterPlayer.py  HumanPlayer.py  RandomPlayer.py  SimplePlayer.py
AI/NeuralNetwork/: CardInput.py  IOHelpers.py  ReplayMemory.py
AI/NeuralNetwork/SimpleLinear/: IOHelpers.py  LinearModule.py  NNSimpleLinearPlayer.py  NNSimpleLinearPlayer_SimpleGame.py  Player.py  Train.py  Train_SimpleGame.py  Trainer.py
App/: main.py  main_simple.py
GUI/: GUI.py  GUICard.py
Game/: Action.py  Card.py  Deck.py  Game.py  GameHelpers.py  Hand.py  HandHelpers.py  Marriage.py  Marriages.py  Player.py
SimpleGame/: SimpleGame.py  SimpleHuman.py  SimplePlayer.py
Tests/Game/: test_deck.py  test_hand.py  test_handHelpers.py  test_marriage.py
schnapsen/: __main__.py  logs.py  tournament.py
schnapsen/ai/: better_player.py  random_player.py
schnapsen/ai/mcts/: mcts.py
schnapsen/core/: action.py  actions.py  card.py  deck.py  hand.py  human_player.py  marriage.py  match_controller.py  match_helpers.py  player.py  state.py
schnapsen/gui/: gui.py  gui_card.py
tests/: test_tournament.py
tests/core/: test_action.py  test_deck.py  test_game_helpers.py  test_hand.py  test_human_player.py  test_marriage.py  test_match_controller.py
tests/game/: test_action.py  test_deck.py  test_game.py  test_game_helpers.py  test_hand.py  test_human_player.py  test_marriage.py  test_match_controller.py
tests/gui/: test_gui.py
(+9 files in other folders)
